--- a/index.html
+++ b/index.html
@@ -12,29 +12,25 @@ body {
     flex-direction:column;
     justify-content:center;
     align-items:center;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
-    color: #fff;
+    background: linear-gradient(135deg,#1e3c72,#2a5298);
+    color:#fff;
 }
-h1 {
-    font-size:2em;
-    margin-bottom:20px;
-    text-shadow: 0 0 10px #fff;
-}
+h1 { font-size:2em; margin:20px 0; text-shadow:0 0 10px #fff; }
+#mode { position:absolute; top:10px; right:10px; }
 button {
-    padding: 12px 25px;
-    font-size: 16px;
-    cursor: pointer;
+    padding:10px 20px;
+    font-size:16px;
+    cursor:pointer;
     border:none;
     border-radius:10px;
     margin:5px;
     color:#fff;
-    transition: 0.3s;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transition:0.3s;
 }
-#genKey { background: linear-gradient(45deg,#ff416c,#ff4b2b);}
-#genKey:hover { transform:scale(1.05); box-shadow: 0 8px 20px rgba(0,0,0,0.4);}
-#copyKey { background: linear-gradient(45deg,#1fa2ff,#12d8fa);}
-#copyKey:hover { transform:scale(1.05); box-shadow: 0 8px 20px rgba(0,0,0,0.4);}
+#genKey { background: linear-gradient(45deg,#ff416c,#ff4b2b); }
+#genKey:hover { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.4); }
+#copyKey { display:none; background: linear-gradient(45deg,#1fa2ff,#12d8fa); }
+#copyKey:hover { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.4); }
 #showKey {
     margin-top:20px;
     font-size:18px;
@@ -42,9 +38,8 @@ button {
     border-radius:10px;
     background: rgba(255,255,255,0.1);
     text-align:center;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-    width:90%;
-    max-width:400px;
+    box-shadow:0 5px 15px rgba(0,0,0,0.2);
+    min-width:250px;
     word-wrap:break-word;
 }
 @media screen and (max-width:600px){
@@ -53,14 +48,22 @@ button {
 </style>
 </head>
 <body>
+<div id="mode">
+    <button onclick="setMode('Mobile')">Mobile</button>
+    <button onclick="setMode('PC')">PC</button>
+</div>
+
 <h1>Key Generator</h1>
 <button id="genKey">Tạo Key</button>
 <button id="copyKey">Sao chép Key</button>
 <p id="showKey"></p>
 
 <script>
+let mode = "Mobile";
+function setMode(m) { mode = m; alert("Chế độ: " + m); }
+
 function generateKey() {
-    // Giữ công thức cũ để Lua dùng được
+    // Giữ nguyên công thức Lua cũ
     let today = new Date().toISOString().slice(0,10);
     let raw = "PhongKeySystem" + today;
     let key = btoa(raw);
@@ -70,10 +73,11 @@ function generateKey() {
 document.getElementById('genKey').onclick = function() {
     let key = generateKey();
     let expire = new Date();
-    expire.setDate(expire.getDate() + 1);
+    expire.setDate(expire.getDate()+1);
     localStorage.setItem("myKey", key);
     localStorage.setItem("myKeyExpire", expire.toISOString());
     document.getElementById('showKey').innerText = `Key của bạn: ${key}\nHết hạn: ${expire.toLocaleString()}`;
+    document.getElementById('copyKey').style.display = 'inline-block';
 }
 
 document.getElementById('copyKey').onclick = function() {
