--- a/index.html
+++ b/index.html
@@ -5,92 +5,74 @@
 <title>Key Generator</title>
 <style>
 body {
-    margin:0;
-    height:100vh;
-    font-family: Arial;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    background: linear-gradient(135deg,#1f1f1f,#3a3a3a);
-    color:white;
+    font-family: Arial, sans-serif;
+    margin:0; height:100vh;
+    display:flex; flex-direction:column;
+    justify-content:center; align-items:center;
+    background: linear-gradient(135deg,#1e3c72,#2a5298); color:#fff;
 }
+h1 { font-size:2em; margin:20px 0; text-shadow:0 0 10px #fff; }
 button {
-    padding:12px 25px;
-    font-size:17px;
-    border:none;
-    border-radius:10px;
-    margin:10px;
-    cursor:pointer;
-    transition:0.2s;
-    color:white;
+    padding:10px 20px; font-size:16px; cursor:pointer;
+    border:none; border-radius:10px; margin:5px; color:#fff; transition:0.3s;
 }
-#genBtn { background:#4a90e2; }
-#copyBtn { background:#50e3c2; display:none; }
-#show { margin-top:20px; font-size:18px; text-align:center; }
-
-@media(max-width:600px){
-    button { width:90%; }
+#genKey { background: linear-gradient(45deg,#ff416c,#ff4b2b); }
+#genKey:hover { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.4); }
+#copyKey { display:none; background: linear-gradient(45deg,#1fa2ff,#12d8fa); }
+#copyKey:hover { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.4); }
+#showKey {
+    margin-top:20px; font-size:18px; padding:15px; border-radius:10px;
+    background: rgba(255,255,255,0.1); text-align:center; box-shadow:0 5px 15px rgba(0,0,0,0.2);
+    min-width:250px; word-wrap:break-word;
 }
+@media screen and (max-width:600px){ button, #showKey { width:90%; } }
 </style>
 </head>
 <body>
-
-<h1>Secure Key Generator</h1>
-
-<button id="genBtn">Tạo Key</button>
-<button id="copyBtn">Sao chép Key</button>
-<div id="show"></div>
+<h1>Key Generator</h1>
+<button id="genKey">Tạo Key</button>
+<button id="copyKey">Sao chép Key</button>
+<p id="showKey"></p>
 
 <script>
+// Tạo deviceID duy nhất
+if(!localStorage.getItem("deviceID")){
+    localStorage.setItem("deviceID","dev"+Math.floor(Math.random()*1e8))
+}
+let deviceID = localStorage.getItem("deviceID")
 
-// Fingerprint nhẹ
-async function getFingerprint(){
-    let data = navigator.userAgent + screen.width + screen.height + navigator.language;
-    let hashBuffer = await crypto.subtle.digest("SHA-256", new TextEncoder().encode(data));
-    let hex = Array.from(new Uint8Array(hashBuffer)).map(b=>b.toString(16).padStart(2,"0")).join("");
-    return hex.slice(0,16);
+// Hàm hash đơn giản nhưng khó đoán
+function hash16(str){
+    let hash=0
+    for(let i=0;i<str.length;i++){
+        hash = (hash<<5)-hash+str.charCodeAt(i)
+        hash |=0
+    }
+    return Math.abs(hash).toString(16).slice(0,16)
 }
 
-// Hàm encode tránh đoán key
-function deepEncode(str){
-    return btoa(btoa(str).split("").reverse().join(""));
+// Tạo key dựa trên device + date
+function generateKey(){
+    let now = new Date()
+    let today = now.getFullYear()+"-"+(now.getMonth()+1)+"-"+now.getDate()
+    return hash16(deviceID+today)
 }
 
-async function generateKey(){
-    let fp = await getFingerprint();
-
-    let date = new Date().toISOString().slice(0,10);
-
-    let raw = fp + "_" + date;
-
-    let encoded = deepEncode(raw);
-
-    // Key rút gọn dài 18 ký tự
-    return encoded.slice(0,18);
+document.getElementById('genKey').onclick = function(){
+    let key = generateKey()
+    let expire = new Date()
+    expire.setHours(expire.getHours()+24)
+    localStorage.setItem("myKey", key)
+    localStorage.setItem("myKeyExpire", expire.toISOString())
+    document.getElementById('showKey').innerText = `Key: ${key}\nHết hạn: ${expire.toLocaleString()}`
+    document.getElementById('copyKey').style.display='inline-block'
 }
 
-document.getElementById("genBtn").onclick = async ()=>{
-
-    let key = await generateKey();
-
-    let expire = Date.now() + 24*60*60*1000;
-
-    localStorage.setItem("KEY", key);
-    localStorage.setItem("KEY_EXPIRE", expire);
-
-    document.getElementById("show").innerText =
-        "Key: " + key + "\nHết hạn: 24 giờ kể từ bây giờ";
-
-    document.getElementById("copyBtn").style.display = "inline-block";
-};
-
-document.getElementById("copyBtn").onclick = ()=>{
-    let key = localStorage.getItem("KEY");
-    navigator.clipboard.writeText(key);
-    alert("Đã sao chép key!");
-};
-
+document.getElementById('copyKey').onclick = function(){
+    let key = localStorage.getItem("myKey")
+    if(key){ navigator.clipboard.writeText(key); alert("Key đã sao chép!"); }
+    else alert("Chưa tạo key!")
+}
 </script>
 </body>
 </html>
