--- a/checkpoint.html
+++ b/checkpoint.html
@@ -9,30 +9,28 @@ body {margin:0;font-family:Arial,sans-serif;background:black;color:white;display
 h1 {color:red;margin-bottom:20px;}
 .btn {background:white;color:red;padding:12px 25px;border:none;border-radius:10px;font-size:16px;cursor:pointer;margin:5px;}
 .btn:hover {background:red;color:white;}
+#message {margin-bottom:20px;}
 </style>
 </head>
 <body>
 <h1>Checkpoint</h1>
-<p id="message">Please click the bypass link first.</p>
-<a id="bypassLink" class="btn" href="YOUR_LINK_HERE" target="_blank">Go to Bypass Link</a>
+<p id="message">Please click Get Key first</p>
 <button class="btn" id="continueBtn" style="display:none;" onclick="goKey()">Continue</button>
 
 <script>
-const lastVisit = localStorage.getItem('checkpointTime');
+const bypassTime = localStorage.getItem('bypassTime');
 const now = Date.now();
 
-// Nếu đã click link vài phút trước (<5 phút)
-if(lastVisit && now - lastVisit < 5*60*1000){
-  document.getElementById('message').innerText = "Checkpoint complete";
+if(bypassTime && now - bypassTime < 5*60*1000){ // trong 5 phút
+  document.getElementById('message').innerText = "Checkpoint complete!";
+  // tạo ID riêng
+  const uniqueID = 'ID_' + Math.floor(Math.random()*1000000);
+  localStorage.setItem('keyID', uniqueID);
   document.getElementById('continueBtn').style.display = "inline-block";
-} 
+} else {
+  document.getElementById('message').innerText = "The link cannot be bypassed.";
+}
 
-// Khi click link, lưu thời gian
-document.getElementById('bypassLink').addEventListener('click', () => {
-  localStorage.setItem('checkpointTime', Date.now());
-});
-
-// Continue chuyển qua key.html
 function goKey(){
   window.location.href = "key.html";
 }
