--- a/checkpoint.html
+++ b/checkpoint.html
@@ -5,49 +5,43 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Checkpoint</title>
 <style>
-body {margin:0;font-family:Arial,sans-serif;background:black;color:white;display:flex;flex-direction:column;justify-content:center;align-items:center;height:100vh;text-align:center;}
+body {margin:0;font-family:Arial;background:black;color:white;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;}
 h1 {color:red;margin-bottom:20px;}
-.btn {background:white;color:red;padding:12px 25px;border:none;border-radius:10px;font-size:16px;cursor:pointer;margin:5px;}
+.btn {background:white;color:red;padding:12px 25px;border:none;border-radius:10px;font-size:16px;cursor:pointer;}
 .btn:hover {background:red;color:white;}
-#message {margin-bottom:20px;}
 </style>
 </head>
 <body>
+
 <h1>Checkpoint</h1>
-<p id="message">Processing...</p>
-<button class="btn" id="continueBtn" style="display:none;" onclick="goKey()">Continue</button>
+<p id="msg">Processing...</p>
+<button id="btn" class="btn" style="display:none;" onclick="next()">Continue</button>
 
 <script>
-// Lấy ID từ URL
-let urlParams = new URLSearchParams(window.location.search);
-let id = urlParams.get('id');
+// Lấy thời gian checkpoint trong localStorage
+let saved = localStorage.getItem('checkpoint_time');
+let now = Date.now();
 
-// Lấy danh sách ID hợp lệ từ localStorage
-const validIDs = JSON.parse(localStorage.getItem('validIDs') || '[]');
-
-// Kiểm tra ID hợp lệ
-if(!id || !validIDs.includes(id)){
-    document.getElementById('message').innerText = "Anti Bypass from Phong";
-    document.getElementById('continueBtn').style.display = "none";
-} else {
-    const now = Date.now();
-    const savedTime = parseInt(localStorage.getItem('checkpoint_' + id) || now);
-    // Lưu thời gian nếu chưa có
-    if(!localStorage.getItem('checkpoint_' + id)) localStorage.setItem('checkpoint_' + id, now);
-    // Kiểm tra hết hạn 5 phút
-    if(now - savedTime < 5*60*1000){
-        document.getElementById('message').innerText = "Checkpoint complete!";
-        document.getElementById('continueBtn').style.display = "inline-block";
-    } else {
-        document.getElementById('message').innerText = "Anti Bypass from Phong";
-        document.getElementById('continueBtn').style.display = "none";
-    }
+// Nếu chưa có thì đặt thời gian hiện tại
+if(!saved){
+    localStorage.setItem('checkpoint_time', now);
+    saved = now;
 }
 
-// Chuyển tiếp sang key.html với cùng ID
-function goKey(){
-    window.location.href = "key.html?id=" + id;
+// Kiểm tra 5 phút
+if(now - saved < 5 * 60 * 1000){
+    document.getElementById('msg').innerText = "Checkpoint complete!";
+    document.getElementById('btn').style.display = "inline-block";
+} else {
+    document.getElementById('msg').innerText = "Anti Cheat from Phong";
+    document.getElementById('btn').style.display = "none";
+}
+
+// Qua trang key.html
+function next(){
+    window.location.href = "key.html";
 }
 </script>
+
 </body>
 </html>
